# Voxel-Engine

./: README.md
v1/: CMakeLists.txt  todo.txt  volcano_mesh.raw  voxel.cpp  voxel_cubebackup.cpp  voxel_first_chunk.cpp
v1/shaders/: color.glslf  color.glslv  color_with_normal_light.glslv
v1/src/: block.hpp  camera.hpp  chunk.hpp  createShaderObject.hpp  input.hpp  model.hpp  triangle.hpp  vertex.hpp  voxelmap.hpp
